--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,16 @@
         <artifactId>pagehelper-spring-boot-starter</artifactId>
         <version>1.2.12</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <!-- Alibaba的druid数据库连接池 -->
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid-spring-boot-starter</artifactId>
+        <version>1.2.5</version>
+    </dependency>
 </dependencies>
 
 <build>
