--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,16 @@
-#mysql
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/test?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+##mysql
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#druid
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.druid.username=root
+spring.datasource.druid.password=root
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=10
 
 #mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -20,5 +28,5 @@ server.port=8082
 #程序使用配置常量
 common.desensitization.url=http://localhost:8080/user/test3
 common.user.pageSize=2
-common.custom.pageSize=3
+common.custom.pageSize=1
 
